# nfcity

./: LICENSE.txt  Makefile  README.md  index.html  nfcity.code-workspace  package-lock.json  package.json  webpack.config.js
.docker/web/: Dockerfile
.github/workflows/: gh_pages.yaml
firmware/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.local.example
firmware/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  nfcity.c
firmware/main/include/: console.h  dec.h  enc.h  msg.h
firmware/main/src/: console.c  dec.c  enc.c  msg.c
src/: App.vue  index.html  index.js  main.ts  style.scss
web/: .env  .env.development  .env.production  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/src/: App.scss  App.vue  CancelationToken.ts  Logger.ts  WNS.ts  console.ts  form.scss  helpers.ts  keys.ts  main.scss  main.ts  theme.scss
web/src/comm/: Client.ts  clientEmits.ts
web/src/comm/composables/: onClientClose.ts  onClientDisconnect.ts  onClientEnd.ts  onClientMessage.ts  onClientOffline.ts  onClientPing.ts  onClientPong.ts  onClientPongMissed.ts  onClientReady.ts  onClientReconnect.ts
web/src/comm/dtos/: PiccBlockDto.ts
web/src/comm/events/: ClientCloseEvent.ts  ClientDisconnectEvent.ts  ClientEmits.ts  ClientEndEvent.ts  ClientEvent.ts  ClientEvents.ts  ClientMessageEvent.ts  ClientOfflineEvent.ts  ClientPingEvent.ts  ClientPongEvent.ts  ClientPongMissedEvent.ts  ClientReadyEvent.ts  ClientReconnectEvent.ts
web/src/comm/hooks/: ClientEmitHooks.ts  ClientEventHooks.ts
web/src/comm/msgs/: Message.ts
web/src/communication/: Client.ts  Dto.ts  Message.ts  clientEmits.ts
web/src/communication/composables/: onClientClose.ts  onClientDisconnect.ts  onClientEnd.ts  onClientMessage.ts  onClientOffline.ts  onClientPing.ts  onClientPong.ts  onClientPongMissed.ts  onClientReady.ts  onClientReconnect.ts
web/src/communication/dtos/: PiccBlockDto.ts  PiccDto.ts  PiccKeyDto.ts  PiccSectorDto.ts  PiccStateChangeDto.ts
web/src/communication/events/: ClientCloseEvent.ts  ClientDisconnectEvent.ts  ClientEndEvent.ts  ClientEvent.ts  ClientMessageEvent.ts  ClientOfflineEvent.ts  ClientPingEvent.ts  ClientPongEvent.ts  ClientPongMissedEvent.ts  ClientReadyEvent.ts  ClientReconnectEvent.ts
web/src/communication/messages/: Message.ts  PiccBlockMessage.ts  PiccBlockReadMessage.ts  PiccReadBlockMessage.ts  PiccStateChanged.ts  PiccStateChangedMessage.ts
web/src/components/: ExampleComponent.vue  Mqtt.vue
web/src/components/App/: App.vue
web/src/components/BytesInput/: BytesInput.vue
web/src/components/ClientConfig/: ClientConfig.scss  ClientConfig.vue
web/src/components/Connect/: Connect.vue
web/src/components/Dashboard/: BlockGroupStatusBarItem.vue  BlockInfoRenderer.vue  ByteStatusBarItem.vue  Dashboard.scss  Dashboard.vue  SectorStatusBarItem.vue  StatusBar.vue  TargetByte.ts  TargetByteRenderer.scss  TargetByteRenderer.vue
web/src/components/DataBlockEditor/: DataBlockEditor.vue
web/src/components/HoverableInputPlaceholder/: HoverableInputPlaceholder.vue
web/src/components/HoverablePlaceholder/: HoverablePlaceholder.vue
web/src/components/InfoPanel/: InfoPanel.vue
web/src/components/Memory/: ByteRepresentation.ts  Memory.scss  Memory.vue  MemoryFocus.ts
web/src/components/MemoryBlock/: MemoryBlock.scss  MemoryBlock.vue  MemoryBlockByteGroup.ts  MemoryBlockClickEvent.ts  MemoryBlockEvents.ts  MemoryBlockFocus.ts  MemoryBlockGroup.ts
web/src/components/MemoryBlockEditor/: AccessBitsComboSwitcher.vue  AccessConditionsDescriptionRenderer.vue  KeyTypePermissions.vue  (+2 more)
web/src/composables/: useClient.ts  useClientStorage.ts
web/src/directives/: vFocus.ts
web/src/hooks/: onDeviceMessage.ts  useClient.ts  useClientStorage.ts
web/src/ioc/: ClientInjection.ts  ClientStorageInjection.ts  keys.ts
web/src/messages/: Message.ts  PiccStateChanged.ts
web/src/models/: MifareClassic.ts  Picc.ts
web/src/storage/: ClientStorage.ts
web/src/utils/: CancelationToken.ts  ConsoleLogStyle.ts  Logger.ts  NFCityWNS.ts  helpers.ts  terminalColors.ts
(+159 files in other folders)
